--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="comment my-3">
                       <textarea name="comment" cols="30" rows="10" placeholder="Message..." required style=" border: 2px; height: 80px; width: 100%; border-style: solid; background: transparent; border-color: gray; border-radius: 5px;"></textarea>
                     </div>
-                    <a href="mailto:ori777ethio@gmail.com" value="submit" style="background: crimson; padding: 10px 20px; font-size: 1rem; font-weight: 400; border: crimson; border-radius: 4px; color: #fff; transition: all 0.3 ease;">Send message</a>
+                    <a href="mailto:ori777ethio@gmail.com" style="background: crimson; padding: 10px 20px; font-size: 1rem; font-weight: 400; border: crimson; border-radius: 4px; color: #fff; transition: all 0.3 ease;">Send message</a>
                   </form>
                 </div>
               </div>
