--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             </svg></h1>
                             <h5 class="card-title">Graphic Design</h5>
                             <div class="card-body text-center">
-                              <p class="card-text">producing still images, logos, videos and other visual elements for websites, magazines, presentations and other media design, its all here.</p>
+                              <p class="card-text">If you are looking for a designer for producing still images, logos, videos and other visual elements for websites, magazines, presentations and other media design, its all here.</p>
                             </div>
                           </div>
                     </div>
