--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="text-1">Hello, My name is</div>
                         <div class="text-2">Orion Kibret</div>
                         <div class="text-3">And I'm a <span class="typed-text"></span> <span class="cursor">&nbsp;</span></div>
-                        <a href="#">Hire me</a>
+                        <a href="mailto:ori777ethio@gmail.com">Hire me</a>
             </div>
           </header>
           <section class="about-me fill-height" id="About">
