--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <p>3 years of freelancing, and 2 years of developing a local digital library at <abbr title="University of Gondar" style="text-decoration: none; cursor: pointer;">UoG</abbr> as a front-end desiner and as a blogger 
                   just open the door for new problem solving methods and for exploration of new skills in my career of web-development and design, its more fun. if you're 
                 looking for the person who is experienced and also still eagered to know new things and to explore more, i am the right person.</p>
-                <a href="#">Read more</a>
+                <a href="/images1/CV_ORIONkib.pdf">Read more</a>
                 </div>
                 <div class="col-md-6 pt-2">
                   <div class="bars"><div class="info" style="display: flex; justify-content: space-between; margin-top: 20px; margin-bottom: 5px; align-items: center;"><span>HTML</span><span>80%</span></div><div class="line html"></div></div>
