--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <section class="about-me fill-height" id="About">
              <h3 style="text-align: center;">About me</h3>
             <div class="container px-5">
-                <div class="row g-5">
+                <div class="row g-5 align-items-center">
                     <div class="col-md-5"><img src="/images1/orisMe.jpg" alt="Who i am" width="300" height="300" style="border-radius: 8px;"></div>
                     <div class="col-md-6 pt-3">
                         <h2>I'm Orion and i'm a <span class="typed-text2"></span><span class="cursor">&nbsp;</span> </h2>
@@ -65,7 +65,7 @@
           <section class="services-me fill-height bg-dark" id="Services">
 
             <h3 style="text-align: center;">My services</h3>
-            <div class="container pt-5 ">
+            <div class="container px-5 pt-5 ">
                 <div class="row text-center align-items-center px-5 g-5">
                     <div class="col-md-4">
                             <div class="card" style="width: 18rem;">
@@ -109,7 +109,7 @@
               <div class="row g-5" style="text-align: justify;">
                 <div class="col-md-6">
                   <h4>My creative skills &amp; experiences</h4>
-                  <p>3 years of freelancing, and 2 years of developing a local digital library at <abbr title="University of Gondar" style="text-decoration: none; cursor: pointer;">UoG</abbr> as a front-end desiner and as a blogger 
+                  <p>3 years of freelancing, and 2 years of developing a local digital library at <abbr title="University of Gondar" style="text-decoration: none; cursor: pointer;">UoG</abbr> as a front-end designer and as a blogger 
                   just open the door for new problem solving methods and for exploration of new skills in my career of web-development and design, its more fun. if you're 
                 looking for the person who is experienced and also still eagered to know new things and to explore more, i am the right person.</p>
                 <a href="/images1/CV_ORIONkib.pdf">Read more</a>
