--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <section class="about-me fill-height" id="About">
              <h3 style="text-align: center;">About me</h3>
             <div class="container px-5">
-                <div class="row g-5 align-items-center">
+                <div class="row g-5 px-5 align-items-center">
                     <div class="col-md-5"><img src="/images1/orisMe.jpg" alt="Who i am" width="300" height="300" style="border-radius: 8px;"></div>
                     <div class="col-md-6 pt-3">
                         <h2>I'm Orion and i'm a <span class="typed-text2"></span><span class="cursor">&nbsp;</span> </h2>
